modelling periods