@@ -13,6 +13,11 @@ import org.springframework.test.context.ActiveProfiles;
 import uk.ratracejoe.sdq.SdqApi;
 import uk.ratracejoe.sdq.SdqDatabaseInitializer;
 import uk.ratracejoe.sdq.model.*;
+import uk.ratracejoe.sdq.model.demographics.Council;
+import uk.ratracejoe.sdq.model.demographics.DemographicField;
+import uk.ratracejoe.sdq.model.demographics.Gender;
+import uk.ratracejoe.sdq.model.sdq.SdqSubmission;
+import uk.ratracejoe.sdq.model.sdq.SdqSubmissionSummary;
 
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
 @ActiveProfiles("test")
@@ -59,6 +64,18 @@ class BulkIngestTest {
     var ingestResponse = sdqApi.ingestFile("Test File 1.xlsx");
     assertThat(ingestResponse.getStatusCode()).isEqualTo(HttpStatus.OK);
     assertThat(ingestResponse.getBody()).hasSize(1);
-    var clientUuid = ingestResponse.getBody().get(0).sdqClient().clientId();
+    SdqClient client = ingestResponse.getBody().getFirst().sdqClient();
+
+    List<ReportingPeriod> periods = sdqApi.getSdqReportingPeriods(client.clientId()).getBody();
+    assertThat(periods).hasSizeGreaterThan(1);
+    ReportingPeriod period = periods.getFirst();
+
+    SdqSubmission sdqSubmission =
+        sdqApi.getSdqSubmission(period.periodId(), Assessor.Parent1).getBody();
+    assertThat(sdqSubmission).isNotNull();
+
+    SdqSubmissionSummary sdqSubmissionSummary =
+        sdqApi.getSdqSubmissionSummary(period.periodId(), Assessor.Parent1).getBody();
+    assertThat(sdqSubmissionSummary).isNotNull();
   }
 }
